Updated requirements.txt (added some libraries)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-"unstructured[all-docs]"
+unstructured[all-docs]
 pillow
 pydantic
 lxml
@@ -23,3 +23,8 @@ langchain
 chromadb
 langchain-google-genai
 langchain_community
+pdfminer.six
+pillow_heif
+psutil
+unstructured_inference
+IPython
